--- a/e9.html
+++ b/e9.html
@@ -1,39 +1,42 @@
-<!DOCTYPE HTML>
+
+<!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>演習問題９</title>
     <link rel="stylesheet" href="e9.css" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
-
   <body>
-      <header>
-      </header>
-      <main>
-          <div class="step">
-              <div class="step1">
-                  <img class="step1-image" src="img/flow01.png">
-                    <p class="box">step1</p>
-                    <h3>タイトルが入ります</h3>
-                    <p>文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
-              </div>
-              <div class="step2">
-                  <img class="step2-image" src="img/flow02.png">
-                    <p class="box">step2</p>
-                    <h3>タイトルが入ります</h3>
-                    <p>文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
-              </div>
-              <div class="step3">
-                  <img class="step3-image" src="img/flow03.png">
-                    <p class="box">step3</p>
-                    <h3>タイトルが入ります</h3>
-                    <p>文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
-              </div>
-          </div>
-      </main>
-      <footer>
-          
-      </footer>
+    <header></header>
+    <main>
+      <div class="step-box">
+        <div class="step-img1"　src="flow01.png"></div>
+        <span class="step-num">step1</span>
+        <h3 class="title">タイトルが入ります</h3>
+        <p class="text">
+          文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+        </p>
+      </div>
+
+      <div class="step-box">
+        <div class="step-img2" src="flow02.png"></div>
+        <span class="step-num">step2</span>
+        <h3 class="title">タイトルが入ります</h3>
+        <p class="text">
+          文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+        </p>
+      </div>
+
+      <div class="step-box">
+        <div class="step-img3" src="flow03.png"></div>
+        <span class="step-num">step3</span>
+        <h3 class="title">タイトルが入ります</h3>
+        <p class="text">
+          文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+        </p>
+      </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
